amelioration hierarchisation balises hebergements

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                 <div id="resultats_hebergements">
                     <h1>Hébergements à Marseille</h1>
                     <div id="hebergements_container">
-                        <a href="">
-                            <div>
+                        <div>
+                            <a href="">
                                 <img src="images\hebergements\aubergelacannebiere_sm.jpg"
                                     alt="Auberge de la Cannebière">
                                 <h2>Auberge de la Cannebière</h2>
@@ -114,10 +114,10 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star" style="color: lightgrey"></i>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="">
                                 <img src="images\hebergements\hotelduport_sm.jpg" alt="Hôtel du port">
                                 <h2>Hôtel du port</h2>
                                 <p>Nuit à partir de 52€</p>
@@ -126,10 +126,10 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="">
                                 <img src="images\hebergements\hotellesmouettes_sm.jpg" alt="Hôtel Les mouettes">
                                 <h2>Hôtel Les mouettes</h2>
                                 <p>Nuit à partir de 76€</p>
@@ -138,10 +138,10 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star" style="color: lightgrey"></i>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="">
                                 <img src="images\hebergements\hoteldelamer_sm.jpg" alt="Hôtel de la mer">
                                 <h2>Hôtel de la mer</h2>
                                 <p>Nuit à partir de 46€</p>
@@ -150,10 +150,10 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star" style="color: lightgrey"></i>
                                 <i class="fas fa-star" style="color: lightgrey"></i>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="">
                                 <img src="images\hebergements\aubergelepanier_sm.jpg" alt="Auberge Le Panier">
                                 <h2>Auberge Le Panier</h2>
                                 <p>Nuit à partir de 23€</p>
@@ -162,10 +162,10 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star" style="color: lightgrey"></i>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="">
                                 <img src="images\hebergements\hotelchezamina_sm.jpg" alt="Hôtel chez Amina">
                                 <h2>Hôtel chez Amina</h2>
                                 <p>Nuit à partir de 96€</p>
@@ -174,12 +174,10 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                            </div>
-                        </a>
+                            </a>
+                        </div>
                     </div>
-                    <a href="">
-                        <h3>Afficher plus</h3>
-                    </a>
+                    <h3><a href="">Afficher plus</a></h3>
                 </div>
                 <!-- resultats hebergements populaires -->
                 <div id="resultats_populaires">
@@ -189,8 +187,8 @@
                     </div>
                     <!--<h1>Populaires<i class="fas fa-chart-line"></i></h1>-->
                     <div id="populaires_container">
-                        <a href="">
-                            <div>
+                        <div>
+                            <a href="">
                                 <img src="images\hebergements\hotellesoleildumatin_sm.jpg"
                                     alt="Hôtel Le soleil du matin">
                                 <h2>Hôtel Le soleil du matin</h2>
@@ -200,10 +198,10 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="">
                                 <img src="images\hebergements\aucoeurdeleauchambredhote_sm.jpg"
                                     alt="Chambres d'hôtes Au coeur de l'eau">
                                 <h2>Au coeur de l'eau <br> Chambres d'hôtes</h2>
@@ -213,10 +211,10 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star" style="color: lightgrey"></i>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="">
                                 <img src="images\hebergements\hoteltoutbleuetblanc_sm.jpg"
                                     alt="Hôtel tout bleu et blanc">
                                 <h2>Hôtel tout bleu et blanc</h2>
@@ -226,8 +224,8 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star" style="color: lightgrey"></i>
-                            </div>
-                        </a>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
