--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
                                     alt="Auberge de la Cannebière">
                                 <h2>Auberge de la Cannebière</h2>
                                 <p>Nuit à partir de 25€</p>
-                                <i class="fas fa-star" style="padding-left: 10px"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star" style="color: lightgrey"></i>
+                                <i class="fas fa-star true first_h" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star false" data-active="false"></i>
                             </a>
                         </div>
                         <div>
@@ -121,11 +121,11 @@
                                 <img src="images\hebergements\hotelduport_sm.jpg" alt="Hôtel du port">
                                 <h2>Hôtel du port</h2>
                                 <p>Nuit à partir de 52€</p>
-                                <i class="fas fa-star" style="padding-left: 10px"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star true first_h" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
                             </a>
                         </div>
                         <div>
@@ -133,11 +133,11 @@
                                 <img src="images\hebergements\hotellesmouettes_sm.jpg" alt="Hôtel Les mouettes">
                                 <h2>Hôtel Les mouettes</h2>
                                 <p>Nuit à partir de 76€</p>
-                                <i class="fas fa-star" style="padding-left: 10px"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star" style="color: lightgrey"></i>
+                                <i class="fas fa-star true first_h" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star false" data-active="false"></i>
                             </a>
                         </div>
                         <div>
@@ -145,11 +145,11 @@
                                 <img src="images\hebergements\hoteldelamer_sm.jpg" alt="Hôtel de la mer">
                                 <h2>Hôtel de la mer</h2>
                                 <p>Nuit à partir de 46€</p>
-                                <i class="fas fa-star" style="padding-left: 10px"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star" style="color: lightgrey"></i>
-                                <i class="fas fa-star" style="color: lightgrey"></i>
+                                <i class="fas fa-star true first_h" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star false" data-active="false"></i>
+                                <i class="fas fa-star false" data-active="false"></i>
                             </a>
                         </div>
                         <div>
@@ -157,11 +157,11 @@
                                 <img src="images\hebergements\aubergelepanier_sm.jpg" alt="Auberge Le Panier">
                                 <h2>Auberge Le Panier</h2>
                                 <p>Nuit à partir de 23€</p>
-                                <i class="fas fa-star" style="padding-left: 10px"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star" style="color: lightgrey"></i>
+                                <i class="fas fa-star true first_h" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star false" data-active="false"></i>
                             </a>
                         </div>
                         <div>
@@ -169,11 +169,11 @@
                                 <img src="images\hebergements\hotelchezamina_sm.jpg" alt="Hôtel chez Amina">
                                 <h2>Hôtel chez Amina</h2>
                                 <p>Nuit à partir de 96€</p>
-                                <i class="fas fa-star" style="padding-left: 10px"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star true first_h" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
                             </a>
                         </div>
                     </div>
@@ -193,11 +193,11 @@
                                     alt="Hôtel Le soleil du matin">
                                 <h2>Hôtel Le soleil du matin</h2>
                                 <p>Nuit à partir de 128€</p>
-                                <span class="icon"><i class="fas fa-star"></i></span>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
+                                <!--<span class="icon">--><i class="fas fa-star true first_p" data-active="true"></i><!--</span>-->
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
                             </a>
                         </div>
                         <div>
@@ -206,11 +206,11 @@
                                     alt="Chambres d'hôtes Au coeur de l'eau">
                                 <h2>Au coeur de l'eau <br> Chambres d'hôtes</h2>
                                 <p>Nuit à partir de 71€</p>
-                                <span class="icon"><i class="fas fa-star"></i></span>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star" style="color: lightgrey"></i>
+                                <span class="icon"><i class="fas fa-star true first_p" data-active="true"></i></span>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star false" data-active="false"></i>
                             </a>
                         </div>
                         <div>
@@ -219,11 +219,11 @@
                                     alt="Hôtel tout bleu et blanc">
                                 <h2>Hôtel tout bleu et blanc</h2>
                                 <p>Nuit à partir de 68€</p>
-                                <span class="icon"><i class="fas fa-star"></i></span>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star" style="color: lightgrey"></i>
+                                <span class="icon"><i class="fas fa-star true first_p" data-active="true"></i></span>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star true" data-active="true"></i>
+                                <i class="fas fa-star false" data-active="false"></i>
                             </a>
                         </div>
                     </div>
