--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Reservia</title>
-    <meta name="description"
-        content="Outil de planification de vacances : trouver des hébergements et des activités dans la ville de son choix">
+    <meta name="description" content="Outil de planification de vacances : trouver des hébergements et des activités dans la ville de son choix">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="css/style.css">
 
@@ -26,14 +25,14 @@
             <ul>
                 <li><a href="#hebergements">Hébergements</a></li>
                 <li><a href="#activites">Activités</a></li>
-                <li id="inscription"><a href="">S'inscrire</a></li>
+                <li><a class="inscription" href="">S'inscrire</a></li>
             </ul>
         </nav>
         <!-- navbar 2 small devices -->
         <nav id="navbar_mobile">
             <div id="logo_inscription">
                 <img src="images/logo/reservia.svg" alt="Logo de Reservia">
-                <a id="inscription" href="">S'inscrire</a>
+                <a class="inscription" href="">S'inscrire</a>
             </div>
             <div id="nav">
                 <a href="#hebergements">Hébergements</a>
@@ -51,7 +50,7 @@
             <!-- searchbar -->
             <div id="searchbar">
                 <i class="fas fa-map-marker-alt"></i>
-                <form role="searchbox">
+                <form role="search">
                     <input id="champ" type="search" name="ville" placeholder="Marseille, France" required>
                     <button id="bouton" type="submit"><i class="fas fa-search display_mobile"></i><span
                             class="display_desktop">Rechercher</span></button>
@@ -59,7 +58,7 @@
             </div>
             <!-- filtres -->
             <div id="filtres">
-                <p>Filtres</p>
+                <h2>Filtres</h2>
                 <ul>
                     <li class="selection"><i class="fas fa-money-bill-wave-alt"></i>Economique</li>
                     <li class="selection"><i class="fas fa-child"></i>Familial</li>
@@ -77,11 +76,11 @@
         <section id="section_hebergements">
             <!-- resultats hebergements ville choisie -->
             <div id="resultats_hebergements">
-                <h1>Hébergements à Marseille</h1>
+                <h2>Hébergements à Marseille</h2>
                 <article>
                     <a href="">
-                        <img src="images\hebergements\aubergelacannebiere_sm.jpg" alt="Auberge de la Cannebière">
-                        <h2>Auberge de la Cannebière</h2>
+                        <img src="images/hebergements/aubergelacannebiere_sm.jpg" alt="Auberge de la Cannebière">
+                        <h3>Auberge de la Cannebière</h3>
                         <p>Nuit à partir de 25€</p>
                         <i class="fas fa-star true first_h" data-active="true"></i>
                         <i class="fas fa-star true" data-active="true"></i>
@@ -92,8 +91,8 @@
                 </article>
                 <article>
                     <a href="">
-                        <img src="images\hebergements\hotelduport_sm.jpg" alt="Hôtel du port">
-                        <h2>Hôtel du port</h2>
+                        <img src="images/hebergements/hotelduport_sm.jpg" alt="Hôtel du port">
+                        <h3>Hôtel du port</h3>
                         <p>Nuit à partir de 52€</p>
                         <i class="fas fa-star true first_h" data-active="true"></i>
                         <i class="fas fa-star true" data-active="true"></i>
@@ -104,8 +103,8 @@
                 </article>
                 <article>
                     <a href="">
-                        <img src="images\hebergements\hotellesmouettes_sm.jpg" alt="Hôtel Les mouettes">
-                        <h2>Hôtel Les mouettes</h2>
+                        <img src="images/hebergements/hotellesmouettes_sm.jpg" alt="Hôtel Les mouettes">
+                        <h3>Hôtel Les mouettes</h3>
                         <p>Nuit à partir de 76€</p>
                         <i class="fas fa-star true first_h" data-active="true"></i>
                         <i class="fas fa-star true" data-active="true"></i>
@@ -116,8 +115,8 @@
                 </article>
                 <article>
                     <a href="">
-                        <img src="images\hebergements\hoteldelamer_sm.jpg" alt="Hôtel de la mer">
-                        <h2>Hôtel de la mer</h2>
+                        <img src="images/hebergements/hoteldelamer_sm.jpg" alt="Hôtel de la mer">
+                        <h3>Hôtel de la mer</h3>
                         <p>Nuit à partir de 46€</p>
                         <i class="fas fa-star true first_h" data-active="true"></i>
                         <i class="fas fa-star true" data-active="true"></i>
@@ -128,8 +127,8 @@
                 </article>
                 <article>
                     <a href="">
-                        <img src="images\hebergements\aubergelepanier_sm.jpg" alt="Auberge Le Panier">
-                        <h2>Auberge Le Panier</h2>
+                        <img src="images/hebergements/aubergelepanier_sm.jpg" alt="Auberge Le Panier">
+                        <h3>Auberge Le Panier</h3>
                         <p>Nuit à partir de 23€</p>
                         <i class="fas fa-star true first_h" data-active="true"></i>
                         <i class="fas fa-star true" data-active="true"></i>
@@ -140,8 +139,8 @@
                 </article>
                 <article>
                     <a href="">
-                        <img src="images\hebergements\hotelchezamina_sm.jpg" alt="Hôtel chez Amina">
-                        <h2>Hôtel chez Amina</h2>
+                        <img src="images/hebergements/hotelchezamina_sm.jpg" alt="Hôtel chez Amina">
+                        <h3>Hôtel chez Amina</h3>
                         <p>Nuit à partir de 96€</p>
                         <i class="fas fa-star true first_h" data-active="true"></i>
                         <i class="fas fa-star true" data-active="true"></i>
@@ -154,14 +153,13 @@
             </div>
             <!-- resultats hebergements populaires -->
             <div id="resultats_populaires">
-                <span id="titre">
-                    <h1> Les plus populaires</h1><i class="fas fa-chart-line"></i>
-                </span>
-                <!--<h1>Populaires<i class="fas fa-chart-line"></i></h1>-->
+                <div id="populaires_titre">
+                    <h2>Les plus populaires</h2><i class="fas fa-chart-line"></i>
+                </div>
                 <article>
                     <a href="">
-                        <img src="images\hebergements\hotellesoleildumatin_sm.jpg" alt="Hôtel Le soleil du matin">
-                        <h2>Hôtel Le soleil du matin</h2>
+                        <img src="images/hebergements/hotellesoleildumatin_sm.jpg" alt="Hôtel Le soleil du matin">
+                        <h3>Hôtel Le soleil du matin</h3>
                         <p>Nuit à partir de 128€</p>
                         <div class="icon">
                             <i class="fas fa-star true" data-active="true"></i>
@@ -174,8 +172,9 @@
                 </article>
                 <article>
                     <a href="">
-                        <img src="images\hebergements\aucoeurdeleauchambredhote_sm.jpg" alt="Chambres d'hôtes Au coeur de l'eau">
-                        <h2>Au coeur de l'eau <br> Chambres d'hôtes</h2>
+                        <img src="images/hebergements/aucoeurdeleauchambredhote_sm.jpg"
+                            alt="Chambres d'hôtes Au coeur de l'eau">
+                        <h3>Au coeur de l'eau <br> Chambres d'hôtes</h3>
                         <p>Nuit à partir de 71€</p>
                         <div class="icon">
                             <i class="fas fa-star true" data-active="true"></i>
@@ -188,8 +187,8 @@
                 </article>
                 <article>
                     <a href="">
-                        <img src="images\hebergements\hoteltoutbleuetblanc_sm.jpg" alt="Hôtel tout bleu et blanc">
-                        <h2>Hôtel tout bleu et blanc</h2>
+                        <img src="images/hebergements/hoteltoutbleuetblanc_sm.jpg" alt="Hôtel tout bleu et blanc">
+                        <h3>Hôtel tout bleu et blanc</h3>
                         <p>Nuit à partir de 68€</p>
                         <div class="icon">
                             <i class="fas fa-star true" data-active="true"></i>
@@ -201,92 +200,94 @@
                     </a>
                 </article>
             </div>
-            </section>
+        </section>
         <!-- section activites -->
         <section id="activites">
+            <!-- resultats activites ville choisie large devices -->
             <div id="resultats_activites_desktop">
-                <h1>Activités à Marseille</h1>
+                <h2>Activités à Marseille</h2>
                 <article class="suggestion_l">
                     <a href="">
-                        <img src="images\activites\vieuxport_sm.jpg" alt="Vieux port">
-                        <h2>Vieux port</h2>
+                        <img src="images/activites/vieuxport_sm.jpg" alt="Vieux port">
+                        <h3>Vieux port</h3>
                     </a>
                 </article>
                 <div>
                     <article class="suggestion_m">
                         <a href="">
-                            <img src="images\activites\fortdepomegues_sm.jpg" alt="Fort de Pomegues">
-                            <h2>Fort de Pomegues</h2>
+                            <img src="images/activites/fortdepomegues_sm.jpg" alt="Fort de Pomegues">
+                            <h3>Fort de Pomegues</h3>
                         </a>
                     </article>
                     <article class="suggestion_xs">
                         <a href="">
-                            <img src="images\activites\ilesdufrioul_sm.jpg" alt="Iles du Frioul">
-                            <h2>Iles du Frioul</h2>
+                            <img src="images/activites/ilesdufrioul_sm.jpg" alt="Iles du Frioul">
+                            <h3>Iles du Frioul</h3>
                         </a>
                     </article>
                 </div>
                 <article class="suggestion_l">
                     <a href="">
-                        <img src="images\activites\parcnationaldescalanques_sm.jpg" alt="Parc national des Calanques">
-                        <h2>Parc National des Calanques</h2>
+                        <img src="images/activites/parcnationaldescalanques_sm.jpg" alt="Parc national des Calanques">
+                        <h3>Parc National des Calanques</h3>
                     </a>
                 </article>
                 <div>
                     <article class="suggestion_xs">
                         <a href="">
-                            <img src="images\activites\notredamedelagarde_sm.jpg" alt="Notre Dame de la garde">
-                            <h2>Notre Dame de la garde</h2>
+                            <img src="images/activites/notredamedelagarde_sm.jpg" alt="Notre Dame de la garde">
+                            <h3>Notre Dame de la garde</h3>
                         </a>
                     </article>
                     <article class="suggestion_m">
                         <a href="">
-                            <img src="images\activites\parclongchamp_sm.jpg" alt="Parc Longchamp">
-                            <h2>Parc Longchamp</h2>
+                            <img src="images/activites/parclongchamp_sm.jpg" alt="Parc Longchamp">
+                            <h3>Parc Longchamp</h3>
                         </a>
                     </article>
                 </div>
             </div>
+            <!-- resultats activites ville choisie small and medium devices -->
             <div id="resultats_activites_mobile">
-                <h1>Activités à Marseille</h1>
+                <h2>Activités à Marseille</h2>
                 <div class="suggestion_l">
                     <a href="">
-                        <img src="images\activites\vieuxport_sm.jpg" alt="Vieux port">
-                        <h2>Vieux port</h2>
+                        <img src="images/activites/vieuxport_sm.jpg" alt="Vieux port">
+                        <h3>Vieux port</h3>
                     </a>
                 </div>
                 <div class="suggestion_m">
                     <a href="">
-                        <img src="images\activites\fortdepomegues_sm.jpg" alt="Fort de Pomegues">
-                        <h2>Fort de Pomegues</h2>
+                        <img src="images/activites/fortdepomegues_sm.jpg" alt="Fort de Pomegues">
+                        <h3>Fort de Pomegues</h3>
                     </a>
                 </div>
                 <div class="suggestion_xs">
                     <a href="">
-                        <img src="images\activites\ilesdufrioul_sm.jpg" alt="Iles du Frioul">
-                        <h2>Iles du Frioul</h2>
+                        <img src="images/activites/ilesdufrioul_sm.jpg" alt="Iles du Frioul">
+                        <h3>Iles du Frioul</h3>
                     </a>
                 </div>
                 <div class="suggestion_l">
                     <a href="">
-                        <img src="images\activites\parcnationaldescalanques_sm.jpg" alt="Parc national des Calanques">
-                        <h2>Parc National des Calanques</h2>
+                        <img src="images/activites/parcnationaldescalanques_sm.jpg" alt="Parc national des Calanques">
+                        <h3>Parc National des Calanques</h3>
                     </a>
                 </div>
                 <div class="suggestion_xs">
                     <a href="">
-                        <img src="images\activites\notredamedelagarde_sm.jpg" alt="Notre Dame de la garde">
-                        <h2>Notre Dame de la garde</h2>
+                        <img src="images/activites/notredamedelagarde_sm.jpg" alt="Notre Dame de la garde">
+                        <h3>Notre Dame de la garde</h3>
                     </a>
                 </div>
                 <div class="suggestion_m">
                     <a href="">
-                        <img src="images\activites\parclongchamp_sm.jpg" alt="Parc Longchamp">
-                        <h2>Parc Longchamp</h2>
+                        <img src="images/activites/parclongchamp_sm.jpg" alt="Parc Longchamp">
+                        <h3>Parc Longchamp</h3>
                     </a>
                 </div>
             </div>
-            </section>
+        </section>
     </main>
     <footer id="footer">
         <div class="footer_info">
