--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Reservia</title>
     <meta name="description" content="Outil de planification de vacances : trouver des hébergements et des activités dans la ville de son choix">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
 
     <!-- lien vers police "raleway" -->
