--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <i class="fas fa-map-marker-alt"></i>
                 <form role="search">
                     <input id="champ" type="search" name="ville" placeholder="Marseille, France" required>
+
                     <button id="bouton" type="submit"><i class="fas fa-search display_mobile"></i><span
                             class="display_desktop">Rechercher</span></button>
                 </form>
@@ -75,11 +76,11 @@
         <!-- section hebergements -->
         <section id="section_hebergements">
             <!-- resultats hebergements ville choisie -->
-            <div id="resultats_hebergements">
+            <article id="resultats_hebergements">
                 <h2>Hébergements à Marseille</h2>
                 <article>
                     <a href="">
-                        <img src="images/hebergements/aubergelacannebiere_sm.jpg" alt="Auberge de la Cannebière">
+                        <img src="images/hebergements/aubergelacannebiere_sm.jpg" alt="Dortoir avec vue sur la Cannebière">
                         <h3>Auberge de la Cannebière</h3>
                         <p>Nuit à partir de 25€</p>
                         <i class="fas fa-star true first_h" data-active="true"></i>
@@ -91,7 +92,7 @@
                 </article>
                 <article>
                     <a href="">
-                        <img src="images/hebergements/hotelduport_sm.jpg" alt="Hôtel du port">
+                        <img src="images/hebergements/hotelduport_sm.jpg" alt="Chambre moderne avec lits jumeaux">
                         <h3>Hôtel du port</h3>
                         <p>Nuit à partir de 52€</p>
                         <i class="fas fa-star true first_h" data-active="true"></i>
@@ -103,7 +104,7 @@
                 </article>
                 <article>
                     <a href="">
-                        <img src="images/hebergements/hotellesmouettes_sm.jpg" alt="Hôtel Les mouettes">
+                        <img src="images/hebergements/hotellesmouettes_sm.jpg" alt="Chambre élégante avec lit double et dressing">
                         <h3>Hôtel Les mouettes</h3>
                         <p>Nuit à partir de 76€</p>
                         <i class="fas fa-star true first_h" data-active="true"></i>
@@ -115,7 +116,7 @@
                 </article>
                 <article>
                     <a href="">
-                        <img src="images/hebergements/hoteldelamer_sm.jpg" alt="Hôtel de la mer">
+                        <img src="images/hebergements/hoteldelamer_sm.jpg" alt="Chambre traditionnelle avec charpente bleue et lit double">
                         <h3>Hôtel de la mer</h3>
                         <p>Nuit à partir de 46€</p>
                         <i class="fas fa-star true first_h" data-active="true"></i>
@@ -127,7 +128,7 @@
                 </article>
                 <article>
                     <a href="">
-                        <img src="images/hebergements/aubergelepanier_sm.jpg" alt="Auberge Le Panier">
+                        <img src="images/hebergements/aubergelepanier_sm.jpg" alt="Dortoir vintage 4 places entièrement bois">
                         <h3>Auberge Le Panier</h3>
                         <p>Nuit à partir de 23€</p>
                         <i class="fas fa-star true first_h" data-active="true"></i>
@@ -139,7 +140,7 @@
                 </article>
                 <article>
                     <a href="">
-                        <img src="images/hebergements/hotelchezamina_sm.jpg" alt="Hôtel chez Amina">
+                        <img src="images/hebergements/hotelchezamina_sm.jpg" alt="Grande chambre standing avec lits jumeaux, bureau et tv">
                         <h3>Hôtel chez Amina</h3>
                         <p>Nuit à partir de 96€</p>
                         <i class="fas fa-star true first_h" data-active="true"></i>
@@ -150,15 +151,15 @@
                     </a>
                 </article>
                 <h3><a href="">Afficher plus</a></h3>
-            </div>
+            </article>
             <!-- resultats hebergements populaires -->
-            <div id="resultats_populaires">
+            <aside id="resultats_populaires">
                 <div id="populaires_titre">
                     <h2>Les plus populaires</h2><i class="fas fa-chart-line"></i>
                 </div>
                 <article>
                     <a href="">
-                        <img src="images/hebergements/hotellesoleildumatin_sm.jpg" alt="Hôtel Le soleil du matin">
+                        <img src="images/hebergements/hotellesoleildumatin_sm.jpg" alt="Chambre style Art Déco avec lit double">
                         <h3>Hôtel Le soleil du matin</h3>
                         <p>Nuit à partir de 128€</p>
                         <div class="icon">
@@ -172,8 +173,7 @@
                 </article>
                 <article>
                     <a href="">
-                        <img src="images/hebergements/aucoeurdeleauchambredhote_sm.jpg"
-                            alt="Chambres d'hôtes Au coeur de l'eau">
+                        <img src="images/hebergements/aucoeurdeleauchambredhote_sm.jpg" alt="Chambre élégante avec lit double">
                         <h3>Au coeur de l'eau <br> Chambres d'hôtes</h3>
                         <p>Nuit à partir de 71€</p>
                         <div class="icon">
@@ -187,7 +187,7 @@
                 </article>
                 <article>
                     <a href="">
-                        <img src="images/hebergements/hoteltoutbleuetblanc_sm.jpg" alt="Hôtel tout bleu et blanc">
+                        <img src="images/hebergements/hoteltoutbleuetblanc_sm.jpg" alt="Chambre standing avec lit double">
                         <h3>Hôtel tout bleu et blanc</h3>
                         <p>Nuit à partir de 68€</p>
                         <div class="icon">
@@ -199,56 +199,56 @@
                         </div>
                     </a>
                 </article>
-            </div>
+            </aside>
         </section>
         <!-- section activites -->
         <section id="activites">
             <!-- resultats activites ville choisie large devices -->
-            <div id="resultats_activites_desktop">
+            <article id="resultats_activites_desktop">
                 <h2>Activités à Marseille</h2>
                 <article class="suggestion_l">
                     <a href="">
-                        <img src="images/activites/vieuxport_sm.jpg" alt="Vieux port">
+                        <img src="images/activites/vieuxport_sm.jpg" alt="Vue sur les bâteaux du Vieux port avec la ville et Notre Dame au second plan">
                         <h3>Vieux port</h3>
                     </a>
                 </article>
                 <div>
                     <article class="suggestion_m">
                         <a href="">
-                            <img src="images/activites/fortdepomegues_sm.jpg" alt="Fort de Pomegues">
+                            <img src="images/activites/fortdepomegues_sm.jpg" alt="Vue sur le Fort de Pomègues depuis les rochers">
                             <h3>Fort de Pomegues</h3>
                         </a>
                     </article>
                     <article class="suggestion_xs">
                         <a href="">
-                            <img src="images/activites/ilesdufrioul_sm.jpg" alt="Iles du Frioul">
+                            <img src="images/activites/ilesdufrioul_sm.jpg" alt="Vue sur l'île du Frioul depuis le bateau dans l'embarcadaire">
                             <h3>Iles du Frioul</h3>
                         </a>
                     </article>
                 </div>
                 <article class="suggestion_l">
                     <a href="">
-                        <img src="images/activites/parcnationaldescalanques_sm.jpg" alt="Parc national des Calanques">
+                        <img src="images/activites/parcnationaldescalanques_sm.jpg" alt="Vue sur la méditérrannée depuis le sommet des calanques">
                         <h3>Parc National des Calanques</h3>
                     </a>
                 </article>
                 <div>
                     <article class="suggestion_xs">
                         <a href="">
-                            <img src="images/activites/notredamedelagarde_sm.jpg" alt="Notre Dame de la garde">
+                            <img src="images/activites/notredamedelagarde_sm.jpg" alt="Vue sur Notre Dame de la garde depuis une colline avec la ville au premier plan">
                             <h3>Notre Dame de la garde</h3>
                         </a>
                     </article>
                     <article class="suggestion_m">
                         <a href="">
-                            <img src="images/activites/parclongchamp_sm.jpg" alt="Parc Longchamp">
+                            <img src="images/activites/parclongchamp_sm.jpg" alt="Vue sur la fontaine monumentale du Parc Longchamp depuis le bassin inférieur">
                             <h3>Parc Longchamp</h3>
                         </a>
                     </article>
                 </div>
-            </div>
+            </article>
             <!-- resultats activites ville choisie small and medium devices -->
-            <div id="resultats_activites_mobile">
+            <article id="resultats_activites_mobile">
                 <h2>Activités à Marseille</h2>
                 <div class="suggestion_l">
                     <a href="">
@@ -286,7 +286,7 @@
                         <h3>Parc Longchamp</h3>
                     </a>
                 </div>
-            </div>
+            </article>
         </section>
     </main>
     <footer id="footer">
