--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
                 <form role="search">
                     <input id="champ" type="search" name="ville" placeholder="Marseille, France" required>
 
-                    <button id="bouton" type="submit"><i class="fas fa-search display_mobile"></i><span
-                            class="display_desktop">Rechercher</span></button>
+                    <button id="bouton" type="submit"><i class="fas fa-search display_mobile"></i><span class="display_desktop">Rechercher</span></button>
                 </form>
             </div>
             <!-- filtres -->
