correction attribut section hebergement

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
         </section>
         <!-- section hebergements -->
-        <section id="section_hebergements">
+        <section id="hebergements">
             <!-- resultats hebergements ville choisie -->
             <article id="resultats_hebergements">
                 <h2>Hébergements à Marseille</h2>
